--- a/thesis.bib
+++ b/thesis.bib
@@ -1902,6 +1902,13 @@ note = {Selected as an IEEE Micro TopPick},
    url = {https://www.amd.com/en/accelerators/pensando}
 }
 
+@misc{tofino-cancelled,
+   title={Impacts of Intel’s decision to stop Tofino development on P4},
+   author={P4},
+   year={2023},
+   url = {https://forum.p4.org/t/impacts-of-intels-decision-to-stop-tofino-development-on-p4/669/2}
+}
+
 @inproceedings{mira,
 author = {Guo, Zhiyuan and He, Zijian and Zhang, Yiying},
 title = {Mira: A Program-Behavior-Guided Far Memory System},
