futzed with charts for two hours

--- a/thesis.tex
+++ b/thesis.tex
@@ -958,7 +958,7 @@ network hardware.
 \input{rcuckoo/design}
 \input{rcuckoo/evaluation}
 %\input{limitation}
-\input{rcuckoo/conclusion}
+% \input{rcuckoo/conclusion}
 
 % \chapter{Black Box Disaggregation}
 
@@ -975,7 +975,8 @@ design space (with and without programmable network devices). \sword\ demonstrat
 be used to remove contention entirely and achieve performance equal to the underlying network
 capabilities. RCuckoo demonstrates that by carefully constructing algorithms, we can increase
 locality and take advantage of features in commodity network hardware (large sequential RDMA reads
-and on-NIC lock tables). Together these two works provide strong evidence that:
+and on-NIC lock tables). Together th
+Writing objects: 100% (5/5), 642 bytes | 642.00 KiB/s, done.ese two works provide strong evidence that:
 
 \begin{center}
 \textit{Data structures can be optimized for disaggregated memory by leveraging network programmability} \\
@@ -1121,8 +1122,8 @@ techniques and enable a shift towards mainstream disaggregated computing.
 % caption. It is also an example of table/figure that is rotated 90
 % degrees to fit the page.)}}
 % \label{tab:facing}
-% \renewcommand\tabularxcolumn[1]{>{\RaggedLeft\arraybackslash}p{#1}}
-% \parindent=0pt
+% \renewcommand\tabularxcolumn[1
+Writing objects: 100% (5/5), 642 bytes | 642.00 KiB/s, done.
 % \setbox0=\vbox{%
 % \vsize\textwidth
 % \hsize\textheight
